update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Aircraft-in-war_71736
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 71736-h/images/cover.jpg
 creator:
   author:
     agent_name: Bruce, Eric Stuart
     gutenberg_agent_id: '56368'
     url: http://www.gutenberg.org/2009/agents/56368
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71736#Aircraft-in-war
 gutenberg_issued: '2023-09-27'
 identifiers:
   gutenberg: '71736'
